<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.FilterActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Selecciona los filtros a utilizar en la búsqueda" />

        <Button
            android:id="@+id/btnSeleccionConfig"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@id/scrollTabla"
            android:layout_below="@id/textTitle"
            android:layout_alignRight="@id/textTitle"
            android:text="Seleccionar configuración" />

        <TextView
            android:id="@+id/Space"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/textTitle" />

        <ScrollView
            android:id="@+id/scrollTabla"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/btnGuardarConfig"
            android:layout_below="@id/Space"
            android:fillViewport="true">

            <TableLayout
                android:id="@+id/tablaFiltros"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/btnSeleccionConfig"
                android:layout_marginTop="10dp"
                android:gravity="start">

                <TableRow
                    android:id="@+id/rowCombustible"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="#81FF0000">

                    <TextView
                        android:id="@+id/textTipoCombustible"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:text="Tipo de combustible"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="#000000" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#99FFFFFF"
                        android:orientation="horizontal">



                        <Button
                            android:id="@+id/btnCombustibles"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="Mostrar tipos"
                            tools:text="Mostrar tipos" />
                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:id="@+id/rowFavoritos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="#43FF0000">

                    <TextView
                        android:id="@+id/textFavoritos"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:text="Favoritos"
                        android:textColor="#000000" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#BAFFFFFF"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/checkFavoritos"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="1" />
                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:id="@+id/rowProvincia"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="#81FF0000">

                    <TextView
                        android:id="@+id/textProvincia"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:text="Provincia"
                        android:textColor="#000000" />

                    <Spinner
                        android:id="@+id/spinnerProvincia"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#99FFFFFF"
                        android:visibility="visible" />

                </TableRow>

                <TableRow
                    android:id="@+id/rowMarca"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="#43FF0000">

                    <TextView
                        android:id="@+id/textMarca"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:text="Marca"
                        android:textColor="#000000" />

                    <Spinner
                        android:id="@+id/spinnerMarca"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#BAFFFFFF"
                        android:visibility="visible" />

                </TableRow>

                <TableRow
                    android:id="@+id/rowDistancia"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="#81FF0000">

                    <TextView
                        android:id="@+id/textDistancia"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="70dp"
                        android:layout_weight="1"
                        android:text="Distancia"
                        android:textColor="#000000"
                        android:visibility="visible" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#99FFFFFF"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/checkDistancia"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:visibility="visible" />

                        <RadioGroup
                            android:id="@+id/radioGroupDistancia"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1">

                            <RadioButton
                                android:id="@+id/radioButtonMayor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Mayor a" />

                            <RadioButton
                                android:id="@+id/radioButtonMenor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Menor a" />

                        </RadioGroup>

                        <EditText
                            android:id="@+id/editTextDistancia"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:ems="6"
                            android:focusable="false"
                            android:inputType="numberDecimal"
                            android:visibility="visible" />

                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:id="@+id/rowPrecio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="#43FF0000">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textPrecio"
                            android:layout_width="wrap_content"
                            android:layout_height="70dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="60dp"
                            android:layout_weight="1"
                            android:text="Ordenar por precio"
                            android:textColor="#000000" />

                        <CheckBox
                            android:id="@+id/checkPrecio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginLeft="20dp"
                            android:layout_toRightOf="@id/textPrecio" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#BAFFFFFF"
                        android:orientation="vertical">

                        <RadioGroup
                            android:id="@+id/radioGroupPrecio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="40dp"
                            android:layout_weight="1">

                            <RadioButton
                                android:id="@+id/radioButtonAsc"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Mayor a menor"
                                android:visibility="visible" />

                            <RadioButton
                                android:id="@+id/radioButtonDesc"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Menor a mayor"
                                android:visibility="visible" />
                        </RadioGroup>
                    </LinearLayout>

                </TableRow>
                <![CDATA[
                />
            ]]>
            </TableLayout>

        </ScrollView>

        <Button
            android:id="@+id/btnGuardarConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnAceptar"
            android:layout_alignParentBottom="false"
            android:layout_weight="3"
            android:text="Guardar configuración"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnAceptar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_weight="3"
            android:text="Aplicar filtros"
            android:visibility="visible" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>