...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Comparar Gasolineras" />

            <Button
                android:id="@+id/btnListaFiltros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Mostrar filtros" />
        </LinearLayout>

...
            android:id="@+id/swiperefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutBotones">

            <ListView
                android:id="@+id/listViewGasolineras"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
...
